--- a/responsive-full-background-image.css
+++ b/responsive-full-background-image.css
@@ -3,7 +3,7 @@
 */
 body {
   /* Location of the image */
-  background-image: url(images/background-photo.jpg);
+  background-image: url(images/g.jpg);
   
   /* Image is centered vertically and horizontally at all times */
   background-position: center center;
@@ -22,7 +22,7 @@ body {
   background-color:#464646;
   
   /* SHORTHAND CSS NOTATION
-   * background: url(background-photo.jpg) center center cover no-repeat fixed;
+   * background: url(g.jpg) center center cover no-repeat fixed;
    */
 }
 
@@ -31,6 +31,6 @@ body {
   body {
     /* The file size of this background image is 93% smaller
      * to improve page load speed on mobile internet connections */
-    background-image: url(images/background-photo-mobile-devices.jpg);
+    background-image: url(images/gm.jpeg);
   }
 	}
